<resources>
    <string name="center_scan_code">扫码</string>
    <string name="center_cancel_order">商户退货</string>
    <string name="center_check_history">查看历史记录</string>
    <string name="center_rebind">重新绑定</string>
    <string name="center_change_password">修改密码</string>
    <string name="center_soft_setting">软件设置</string>
    <string name="center_soft_update">更新</string>
    <string name="center_about_us">关于我们</string>
    <string name="welcome_sign_in">欢迎登录</string>
    <string name="page_title_exit">退出</string>
    <string name="confirm_logout">您确定要退出吗？</string>
    <string name="order_history">交易记录</string>
    <string name="rebind_confirm">您确定要重新绑定新账户吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="page_title_pingus">联系我们</string>
    <string name="label_pingus_content">我们的联系方式是XXX,YYY,ZZZ</string>
    <string name="aboutus_th_name">名称</string>
    <string name="aboutus_td_name">小燕卡商户端</string>
    <string name="aboutus_th_version">版本</string>
    <string name="aboutus_td_version">V101.23</string>
    <string name="aboutus_th_provider">运营商</string>
    <string name="aboutus_td_provider">小燕卡公司</string>
    <string name="aboutus_th_phone">联系方式</string>
    <string name="aboutus_td_phone">0312-768123</string>
    <string name="aboutus_th_fax">传真</string>
    <string name="aboutus_td_fax">0312-8273699</string>
    <string name="aboutus_th_address">地址</string>
    <string name="aboutus_td_address">保定市新市区建设南路123号</string>
    <string name="title_scan">收款</string>
    <string name="scan_input_money">收款金额</string>
    <string name="scan_action_submit">扫码</string>
    <string name="error_field_be_number">请输入正确的金额</string>
    <string name="error_field_be_positive">金额必须大于零</string>
    <string name="receivemoney">收款</string>
    <string name="charge_result_msg" formatted="false">您已成功收款%s</string>
    <string name="cancel_order_submit">提交</string>
    <string name="cancel_order_hint_app_num">请填写设备编码</string>
    <string name="cancel_order_hint_card">请填写卡号</string>
    <string name="cancel_order_hint_amount">请填写订单金额</string>
    <string name="cancel_order_hint_order">请填写订单号</string>
    <string name="cancel_order_order_id">订单号</string>
    <string name="cancel_order_order_amount">订单金额</string>
    <string name="cancel_order_card_id">卡号</string>
    <string name="cancel_order_app_num">设备编码</string>
    <string name="cancel_order_hint_password">请输入登录密码</string>
    <string name="cancel_order_cancel">取消</string>
    <string name="cancel_order_ok">确定</string>
    <string name="cancel_order_succ">退货成功</string>
    <string name="cancel_order_result_desc" formatted="false">您申请的%s订单已经退货成功。</string>
    <string name="cancel_order_back_to_home">返回首页</string>
    <string name="select_an_api">选择一个接口</string>
    <string name="gototest">测试</string>
    <string name="app_name">燕窝商户</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tab_title_home">首页</string>
    <string name="main_tab_title_nearby">附近商家</string>
    <string name="main_tab_title_balance">最新余额</string>
    <string name="main_tab_title_settings">设置</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan">扫描二维码</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索记录</string>
    <string name="search_history_clean">清除</string>
    <string name="charge_money_orderNumber">订单号:</string>
    <string name="charge_money_number">￥</string>
    <string name="charge_money_confirmed">确认收款</string>
    <string name="login">商家登录</string>
    <string name="active">商家激活</string>
    <string name="login_first_time">商家激活</string>
    <string name="login_account_login">账号登录</string>
    <string name="login_account_id">收银员账号</string>
    <string name="login_auth_code">请填写授权码</string>
    <string name="login_password">请填写密码</string>
    <string name="login_forgot_password">忘记密码?</string>
    <string name="login_draw_gesture_pwd">绘制解锁密码</string>
    <string name="login_draw_gesture_pwd_again">请再次绘制解锁密码</string>
    <string name="binding_title">安全手机绑定</string>
    <string name="binding_security_check">安全验证</string>
    <string name="binding_phone">&#032;&#062;&#032;绑定手机</string>
    <string name="binding_hint_phone_num">手机号</string>
    <string name="binding_hint_card_id">卡号</string>
    <string name="binding_send_verification_code">发送验证码</string>
    <string name="binding_hint_input_verification_code">请输入验证码</string>
    <string name="binding_hint_input_password">请输入密码</string>
    <string name="binding">绑定</string>
    <string name="binding_cannot_get_verification_code">收不到短信验证码？</string>
    <string name="register">注册</string>
    <string name="register_title">立即注册</string>
    <string name="register_required">必填项*</string>
    <string name="register_hint_phone_num">手机号</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_hint_input_verification_code">请输入验证码</string>
    <string name="register_hint_pwd">请输入6-12位数字作为密码</string>
    <string name="register_optional">选填项</string>
    <string name="register_hint_user_name">请输入您的姓名</string>
    <string name="register_hint_user_id">请输入您的身份证号</string>
    <string name="register_hint_user_addr">请输入详细地址</string>
    <string name="register_hint_neet_post">是否需要邮寄卡片</string>
    <string name="register_hint_select_province">选择省</string>
    <string name="register_hint_select_city">选择市</string>
    <string name="register_accept_terms">我已阅读并同意燕巢《用户使用协议》</string>
    <string name="register_terms">&#060;&#060;用户许可协议&#062;&#062;</string>
    <string name="dlg_msg_registering">正在注册...</string>
    <string name="hint_msg_input_address">请输入邮寄地址</string>
    <string name="hint_msg_check_items">您尚未接受《用户使用协议》</string>
    <string name="guesture_pwd_set">设置手势密码</string>
    <string name="guesture_pwd_confirm">确认手势密码</string>
    <string name="guesture_pwd_verify">请输入手势密码</string>
    <string name="guesture_pwd_new">请输入新密码</string>
    <string name="guesture_pwd_new_confirm">请确认新密码</string>
    <string name="guesture_pwd_skip">跳过</string>
    <string name="guesture_pwd_forgot">忘记密码</string>
    <string name="guesture_pwd_login">重新登录</string>
    <string name="guesture_pwd_forgot_dlg">忘记手势密码，需重新登录</string>
    <string name="guesture_pwd_change">修改密码</string>
    <string name="guesture_pwd_confirm_failed">与上次绘制不一致，请重新绘制</string>
    <string name="guesture_pwd_input_old_pwd">请验证原密码</string>
    <string name="home_actionbar_btn_search">搜索</string>
    <string name="home_actionbar_menu_pay">付款</string>
    <string name="home_actionbar_menu_scan">扫二维码</string>
    <string name="search_hint">搜索商户/功能/地区</string>
    <string name="home_my_cards">我的券</string>
    <string name="home_own_cards">拥有的卡券</string>
    <string name="home_my_consumption">消费</string>
    <string name="home_go_to_pay">我要付款</string>
    <string name="home_charge">充值</string>
    <string name="home_qiangquan">今日抢券</string>
    <string name="home_activity">活动</string>
    <string name="home_try_lucky">试手气</string>
    <string name="home_point_mall">积分商城</string>
    <string name="home_yuanbao">元宝</string>
    <string name="home_property">物业</string>
    <string name="home_my_cs">我的客服</string>
    <string name="spaces">&#032;&#032;</string>
    <string name="dlg_msg_loading_qr_code">正在更新二维码...</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="usage_help">使用说明:</string>
    <string name="view_detail">查看详情</string>
    <string name="test_description">优惠券可用商铺：北国先天下，保北购物广场，东丽花行，北斗星餐厅，庆丰包子铺...</string>
    <string name="my_coupons_expire_date" formatted="false">有效期 %s 至\n\t\t\t\t\t\t\t%s</string>
    <string name="snapup_coupons">今日抢券</string>
    <string name="snapup_coupons_title">优惠券</string>
    <string name="snapup_coupons_now">立刻抢券</string>
    <string name="snapup_coupons_emtpy">抢完</string>
    <string name="snapup_coupons_unstarted">未开始</string>
    <string name="snapup_coupons_amount">数量</string>
    <string name="snapup_coupons_dlg_congratu">恭喜您</string>
    <string name="snapup_coupons_dlg_btn">知道了</string>
    <string name="snapup_coupons_total" formatted="false">总数: %d张</string>
    <string name="snapup_coupons_remaining" formatted="false">剩余: %d张</string>
    <string name="snapup_coupons_desc" formatted="false">%s优惠券面值%d元，总数%d张</string>
    <string name="snapup_coupons_desc_bottom" formatted="false">本场优惠券总数%d张</string>
    <string name="coupon_detail">优惠券详情</string>
    <string name="coupon_usage_desc">优惠券使用说明</string>
    <string name="coupon_provider">使用商铺:</string>
    <string name="coupon_expired_date">有效期:</string>
    <string name="coupon_rule">使用规则:</string>
    <string name="coupon_snap_now">马上抢</string>
    <string name="test_coupon_name">5元优惠券</string>
    <string name="test_coupon_desc">满266元使用立减5元</string>
    <string name="coupon_date_range" formatted="false">%s 至 %s</string>
    <string name="test_coupon_provider">北国先天下，保北购物广场，东丽花行，北斗星餐厅，庆丰包子铺...</string>
    <string name="test_coupon_rule">满266元以上商品或消费方可使用5元优惠券</string>
    <string name="try_lucky">试手气</string>
    <string name="try_lucky_usage_help">使用说明</string>
    <string name="latest_activities">最新活动</string>
    <string name="latest_activities_desc">活动说明</string>
    <string name="latest_activities_date">活动时间</string>
    <string name="latest_activities_view_more">查看图文介绍</string>
    <string name="points_mall">积分商城</string>
    <string name="points_mall_help">什么是积分？</string>
    <string name="points_mall_my_points">我的积分：</string>
    <string name="my_shopping_history">我的购买历史</string>
    <string name="commodity_exchange">商品兑换</string>
    <string name="coupons_exchange">优惠券兑换</string>
    <string name="commodity_exchange_section">商品兑换区</string>
    <string name="coupons_exchange_section">优惠券兑换区</string>
    <string name="commodity_detail">商品详情</string>
    <string name="exchange">兑换</string>
    <string name="commodity_characteristic">商品特点</string>
    <string name="commodity_desc">商品说明</string>
    <string name="exchange_desc">兑换说明</string>
    <string name="photo_desc_detail">图文详情</string>
    <string name="exchange_commit_title">兑换信息</string>
    <string name="exchange_hint_input_recipient_name">请输入收件人姓名</string>
    <string name="exchange_hint_phone">请输入手机号/座机号</string>
    <string name="exchange_hint_address">请输入详细地址以方便投递</string>
    <string name="change_verification_code">看不清，换一张</string>
    <string name="exchange_submit">提交</string>
    <string name="exchange_succ">兑换成功</string>
    <string name="exchange_recharge_card_hint" formatted="false">您兑换%s元宝成余额%d元，兑换成功后不可兑回，您确定要兑换吗？</string>
    <string name="exchange_commodity_succ_desc">您兑换的双头狮男士内裤中腰已经兑换成功，将在近几日通过快递方式邮寄给您。</string>
    <string name="exchange_coupons_succ_desc">您兑换的优惠券已经发送至您的账户，点击查看交换记录按钮可查看兑换结果</string>
    <string name="exchange_ingots_succ_desc" formatted="false">您兑换的%s元宝已经兑换成功。</string>
    <string name="exchange_view_history">查看兑换记录</string>
    <string name="coupons_detail">商品详情</string>
    <string name="coupons_usage_desc">优惠券使用说明</string>
    <string name="available_shop">使用商铺</string>
    <string name="expired_date">有效期</string>
    <string name="coupons_rule">使用规则</string>
    <string name="exchange_confirm">确认兑换</string>
    <string name="back_to_points_mall">返回积分商城</string>
    <string name="ingots_mall_title">元宝商城</string>
    <string name="ingots_mall_help">什么是元宝？</string>
    <string name="ingots_mall_my_points">我的元宝：</string>
    <string name="back_to_ingots_mall">返回元宝商城</string>
    <string name="ingots_num" formatted="false">%s元宝</string>
    <string name="property_management">物业管理</string>
    <string name="property_management_disabled">暂未开通此功能</string>
    <string name="property_user_sex" formatte="false">性别: %s</string>
    <string name="property_user_base_info">业主基本信息</string>
    <string name="recharge_fee">缴费</string>
    <string name="recharge_property_fee">缴纳物业费</string>
    <string name="property_bills">物业待交项目</string>
</resources>