<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg"
    android:orientation="vertical">

    <com.creal.nestsaler.views.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_txt_order_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height_middle"
            android:layout_gravity="center_horizontal"
            android:background="@color/input_bg"
            android:drawableLeft="@drawable/icon_login_card_id"
            android:hint="@string/cancel_order_hint_order"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_horizontal" />


        <EditText
            android:id="@+id/id_txt_amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height_middle"
            android:layout_gravity="center_horizontal"
            android:background="@color/input_bg"
            android:drawableLeft="@drawable/ic_cancel_order"
            android:hint="@string/cancel_order_hint_amount"
            android:inputType="numberDecimal"
            android:paddingLeft="10dip"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_horizontal" />

        <EditText
            android:id="@+id/id_txt_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height_middle"
            android:layout_gravity="center_horizontal"
            android:background="@color/input_bg"
            android:drawableLeft="@drawable/icon_login_card_id"
            android:hint="@string/cancel_order_hint_card"
            android:inputType="number"
            android:paddingLeft="10dip"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/divider_horizontal" />

        <EditText
            android:id="@+id/id_txt_app_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height_middle"
            android:layout_gravity="center_horizontal"
            android:background="@color/input_bg"
            android:drawableLeft="@drawable/icon_login_pwd"
            android:hint="@string/cancel_order_hint_app_num"
            android:paddingLeft="10dip"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="13dip"
            android:background="@drawable/bg_darkred_big_cornered"
            android:onClick="onSubmitClick"
            android:text="@string/cancel_order_submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
