<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg"
    android:orientation="vertical">

    <com.creal.nestsaler.views.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_order_order_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/id_txt_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_order_order_amount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/id_txt_order_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_order_card_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/id_txt_order_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_bg"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_order_app_num"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/id_txt_order_app_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_horizontal" />

        <EditText
            android:id="@+id/id_txt_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height_middle"
            android:layout_gravity="center_horizontal"
            android:background="@color/input_bg"
            android:drawableLeft="@drawable/icon_login_pwd"
            android:hint="@string/cancel_order_hint_password"
            android:inputType="numberPassword"
            android:paddingLeft="15dip"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="35dip"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_darkred_big_cornered"
                android:onClick="onCancelClick"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/cancel_order_cancel"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="35dip"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_darkred_big_cornered"
                android:onClick="onOkClick"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/cancel_order_ok"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
